--- a/AdminApp/App.config
+++ b/AdminApp/App.config
@@ -3,4 +3,14 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+  <userSettings>
+    <AdminApp.Properties.Settings>
+      <setting name="CadenaDeConexion" serializeAs="String">
+        <value>Data Source=SERVER\SQLEXPRESS;Initial Catalog=KOTINFO;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False</value>
+      </setting>
+      <setting name="FechaDelSistema" serializeAs="String">
+        <value>2014-01-01 00:00:00.000</value>
+      </setting>
+    </AdminApp.Properties.Settings>
+  </userSettings>
 </configuration>
