--- a/AdminApp/web.config
+++ b/AdminApp/web.config
@@ -8,8 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="InmobiliariaContext" connectionString="Persist Security Info=False;server=SERVER\SQLEXPRESS;database=KOTINFO;Integrated Security=False;User ID=sa;Password=iNfo2008!;"
-      providerName="System.Data.SqlClient" />
+    <add name="InmobiliariaContext" connectionString="Persist Security Info=False;server=SERVER\SQLEXPRESS;database=KOTINFO;Integrated Security=False;User ID=sa;Password=iNfo2008!;" />
   </connectionStrings>
   <!--connectionStrings>
     <add name="InmobiliariaContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AdmApp1;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
