busqueda para poder editar lista. falta cargar todos los campos

--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -77,17 +77,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseDeDatos.cs" />
-    <Compile Include="ABM Cliente\Cliente.cs">
+    <Compile Include="ABM Cliente\Editar Cliente.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ABM Cliente\Cliente.Designer.cs">
-      <DependentUpon>Cliente.cs</DependentUpon>
+    <Compile Include="ABM Cliente\Editar Cliente.Designer.cs">
+      <DependentUpon>Editar Cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="BaseDeDatos.cs" />
+    <Compile Include="ABM Cliente\Crear Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABM Cliente\Crear Cliente.Designer.cs">
+      <DependentUpon>Crear Cliente.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="ABM Cliente\Cliente.resx">
-      <DependentUpon>Cliente.cs</DependentUpon>
+    <EmbeddedResource Include="ABM Cliente\Crear Cliente.resx">
+      <DependentUpon>Crear Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABM Cliente\Editar Cliente.resx">
+      <DependentUpon>Editar Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
