se puede buscar por id y valida

--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -139,7 +139,9 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\search-button-without-text-md.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\email.png" />
   </ItemGroup>
