--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -83,12 +83,24 @@
     <Compile Include="ABM Cliente\Editar Cliente.Designer.cs">
       <DependentUpon>Editar Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABM Pendientes\Crear Pendiente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABM Pendientes\Crear Pendiente.Designer.cs">
+      <DependentUpon>Crear Pendiente.cs</DependentUpon>
+    </Compile>
     <Compile Include="BaseDeDatos.cs" />
     <Compile Include="ABM Cliente\Crear Cliente.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ABM Cliente\Crear Cliente.Designer.cs">
       <DependentUpon>Crear Cliente.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Menu Pricipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Menu Pricipal.Designer.cs">
+      <DependentUpon>Menu Pricipal.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -97,6 +109,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Cliente\Editar Cliente.resx">
       <DependentUpon>Editar Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABM Pendientes\Crear Pendiente.resx">
+      <DependentUpon>Crear Pendiente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Menu Pricipal.resx">
+      <DependentUpon>Menu Pricipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -144,6 +162,18 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\email.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_Asset_20_2342730.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_Searchicons-search-people2_825453.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_user_profile_edit_103781.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\if_line-chart_1608449.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
