--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -51,16 +51,16 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>C2285F049828F20EF904767CEB59DB3E68C9ADE7</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>199F2BD529BBCFBCDBB01B64F1028CAA84500729</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>AdminApp_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>AdminApp_1_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -130,6 +130,7 @@
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="AdminApp_1_TemporaryKey.pfx" />
     <None Include="AdminApp_TemporaryKey.pfx" />
     <None Include="web.config">
       <SubType>Designer</SubType>
