--- a/AdminApp/App.config
+++ b/AdminApp/App.config
@@ -8,7 +8,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
   </configSections>
   <connectionStrings>
-    <add name="InmobiliariaContext" connectionString="Persist Security Info=False;server=SERVER\SA;database=MASTER;Integrated Security=True;"
+    <add name="InmobiliariaContext" connectionString="Persist Security Info=False;server=SERVER\SA;database=KOTDESA;Integrated Security=True;"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <!--connectionStrings>
