--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -83,6 +83,12 @@
     <Compile Include="ABM Cliente\Editar Cliente.Designer.cs">
       <DependentUpon>Editar Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="ABM Inmuebles\Crear_Inmueble.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ABM Inmuebles\Crear_Inmueble.Designer.cs">
+      <DependentUpon>Crear_Inmueble.cs</DependentUpon>
+    </Compile>
     <Compile Include="ABM Pendientes\Crear Pendiente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -110,11 +116,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Seleccionar_Cliente.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Seleccionar_Cliente.Designer.cs">
+      <DependentUpon>Seleccionar_Cliente.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ABM Cliente\Crear Cliente.resx">
       <DependentUpon>Crear Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Cliente\Editar Cliente.resx">
       <DependentUpon>Editar Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ABM Inmuebles\Crear_Inmueble.resx">
+      <DependentUpon>Crear_Inmueble.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Pendientes\Crear Pendiente.resx">
       <DependentUpon>Crear Pendiente.cs</DependentUpon>
@@ -129,6 +144,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Seleccionar_Cliente.resx">
+      <DependentUpon>Seleccionar_Cliente.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="AdminApp_1_TemporaryKey.pfx" />
     <None Include="AdminApp_TemporaryKey.pfx" />
