--- a/AdminApp/AdminApp.csproj
+++ b/AdminApp/AdminApp.csproj
@@ -108,6 +108,13 @@
     <Compile Include="ABM Cliente\Crear Cliente.Designer.cs">
       <DependentUpon>Crear Cliente.cs</DependentUpon>
     </Compile>
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="LoginInfo.cs" />
     <Compile Include="Cliente.cs" />
     <Compile Include="Menu Pricipal.cs">
       <SubType>Form</SubType>
@@ -137,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ABM Pendientes\Pendientes Cliente.resx">
       <DependentUpon>Pendientes Cliente.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Menu Pricipal.resx">
       <DependentUpon>Menu Pricipal.cs</DependentUpon>
